<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/logo_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.monikam.mathemory.LevelsMenu">

   <TextView
       android:id="@+id/cat_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/white"
       android:textSize="25sp"
       android:textAlignment="center"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/example" />

   <Button
       android:id="@+id/example"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/example"
       android:textColor="@color/white"
       android:textSize="40sp"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="88dp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline20"
       android:layout_marginRight="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline8"
       app:layout_constraintHorizontal_bias="0.857" />

   <Button
       android:id="@+id/lev1"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/one"
       android:textColor="@color/white"
       android:textSize="40sp"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="88dp"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       android:layout_marginLeft="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline8"
       app:layout_constraintLeft_toLeftOf="@+id/guideline20"
       app:layout_constraintHorizontal_bias="0.154"

       app:layout_constraintVertical_bias="1.0" />

   <Button
       android:id="@+id/lev2"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:layout_marginBottom="0dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="205dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/two"
       android:textColor="@color/white"
       android:textSize="40sp"
       app:layout_constraintBottom_toTopOf="@+id/guideline3"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="1.0" />

   <Button
       android:id="@+id/lev3"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:layout_marginBottom="0dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="207dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/three"
       android:textColor="@color/white"
       android:textSize="40sp"
       app:layout_constraintBottom_toTopOf="@+id/guideline3"
       app:layout_constraintLeft_toLeftOf="@+id/guideline"
       app:layout_constraintRight_toLeftOf="@+id/guideline2"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="1.0" />

   <Button
       android:id="@+id/lev4"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/four"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline2"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="207dp"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       android:layout_marginBottom="0dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline3"
       app:layout_constraintVertical_bias="1.0" />

   <Button
       android:id="@+id/lev5"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/five"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintTop_toTopOf="@+id/guideline4"
       tools:layout_editor_absoluteY="351dp" />

   <Button
       android:id="@+id/lev6"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/six"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline"
       app:layout_constraintRight_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintTop_toTopOf="@+id/guideline4"
       tools:layout_editor_absoluteY="351dp" />

   <Button
       android:id="@+id/lev7"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/seven"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintTop_toTopOf="@+id/guideline4"
       tools:layout_editor_absoluteY="351dp" />

   <Button
       android:id="@+id/lev8"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/eight"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintTop_toTopOf="@+id/guideline6"
       tools:layout_editor_absoluteY="470dp" />

   <Button
       android:id="@+id/lev9"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/nine"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline"
       app:layout_constraintRight_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintTop_toTopOf="@+id/guideline6"
       tools:layout_editor_absoluteY="470dp" />

   <Button
       android:id="@+id/lev10"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:background="@drawable/number_icon_selector"
       android:text="@string/ten"
       android:textColor="@color/white"
       android:textSize="40sp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintTop_toTopOf="@+id/guideline6"
       tools:layout_editor_absoluteY="470dp" />


   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.33" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline2"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.67" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline3"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.5" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline4"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.58" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline5"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.714527" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline6"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.79" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline20"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.5" />

   <ImageView
       android:id="@+id/s1"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline26"
       app:layout_constraintHorizontal_bias="0.731"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"/>

   <ImageView
       android:id="@+id/s2"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline30"
       android:layout_marginTop="0dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline4"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s3"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       android:src="@drawable/all_grey"
       app:srcCompat="@drawable/all_grey"
       app:layout_constraintTop_toBottomOf="@+id/guideline30"
       android:layout_marginTop="0dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline4"
       app:layout_constraintLeft_toRightOf="@+id/s2"
       android:layout_marginLeft="8dp"
       app:layout_constraintRight_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="0.617"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s4"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline30"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline4"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s5"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline28"
       android:layout_marginTop="0dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline6"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s6"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline28"
       android:layout_marginTop="-3dp"
       app:layout_constraintLeft_toRightOf="@+id/s5"
       android:layout_marginLeft="8dp"
       app:layout_constraintRight_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline6"
       app:layout_constraintHorizontal_bias="0.617"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s7"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline28"
       android:layout_marginTop="0dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toTopOf="@+id/guideline6"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s8"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline29"
       android:layout_marginTop="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/guideline"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s9"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline29"
       android:layout_marginTop="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       app:layout_constraintLeft_toRightOf="@+id/s8"
       android:layout_marginLeft="8dp"
       app:layout_constraintRight_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintHorizontal_bias="0.617"
       app:layout_constraintVertical_bias="0.0" />

   <ImageView
       android:id="@+id/s10"
       android:src="@drawable/all_grey"
       android:layout_width="80dp"
       android:layout_height="25dp"
       android:adjustViewBounds="false"
       app:layout_constraintTop_toBottomOf="@+id/guideline29"
       android:layout_marginTop="0dp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="@+id/guideline2"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintVertical_bias="0.0" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline26"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.285" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline27"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.50" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline28"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.72" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline29"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.93" />

   <android.support.constraint.Guideline
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/guideline30"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.5059" />

</android.support.constraint.ConstraintLayout>