<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo_background"
    tools:context="com.example.monikam.mathemory.ExampleFractions2">

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/improper"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="337dp"
        android:layout_height="149dp"
        android:text="@string/impropertext"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/t2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/number1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/number_icon"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/number2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.772"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <Button
        android:id="@+id/number2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/number_icon"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginRight="92dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <ImageView
        android:id="@+id/box1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/square"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/box2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.981" />

    <ImageView
        android:id="@+id/box2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/square"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="41dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="11dp"
        app:srcCompat="@drawable/line"
        app:layout_constraintBottom_toBottomOf="@+id/box2"
        android:layout_marginBottom="82dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>
